# tool-veo-ai

./: Veo3Automation.spec  admin_gen_key.py  main.py  pyproject.toml
src/: constants.py
src/automation/: browser.py
src/ui/: app.py  license_window.py  styles.py
src/ui/components/: base.py
src/ui/tabs/: browser_tab.py  char_setup_tab.py  create_video_tab.py  logs_tab.py  merge_tab.py  note_tab.py  text2image_tab.py  text2video_tab.py
src/utils/: helpers.py  license_manager.py
