[project]
name = "veo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "pillow>=12.1.1",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
